--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ========= BOX ICONS========= -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
 
     <!-- ========= CSS ========= -->
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <title>Document</title>
+    <title>Resume</title>
   </head>
-  <body></body>
+  <body>
+    <!-- ========= HEADER ========= -->
+    <header></header>
+    <main class="l-main bd-container"></main>
+    <!-- ========= SCROLL TOP ========= -->
+    <!-- ========= HTML2PDF ========= -->
+    <script src=""></script>
+    <!-- ========= MAIN JS ========= -->
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
