--- a/index.html
+++ b/index.html
@@ -16,45 +16,45 @@
   </head>
   <body>
     <!-- ========= HEADER ========= -->
-    <header>
+    <header class="l-header" id="header">
       <nav class="nav bd-container">
-        <a href="#" class="nav__logo">Smith</a>
+        <a href="#" class="nav__logo">Khalil</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#home" class="nav__link">
-                <i class="bx bx-home"></i>Home
+                <i class="bx bx-home nav__icon active-link"></i>Home
               </a>
             </li>
             <li class="nav__item">
               <a href="#profile" class="nav__link">
-                <i class="bx bx-user"></i>Profile
+                <i class="bx bx-user nav__icon"></i>Profile
               </a>
             </li>
             <li class="nav__item">
               <a href="#education" class="nav__link">
-                <i class="bx bx-book"></i>Education
+                <i class="bx bx-book nav__icon"></i>Education
               </a>
             </li>
             <li class="nav__item">
               <a href="#skills" class="nav__link">
-                <i class="bx bx-receipt"></i>Skills
+                <i class="bx bx-receipt nav__icon"></i>Skills
               </a>
             </li>
             <li class="nav__item">
               <a href="#experience" class="nav__link">
-                <i class="bx bx-briefcase-alt"></i>Experience
+                <i class="bx bx-briefcase-alt nav__icon"></i>Experience
               </a>
             </li>
             <li class="nav__item">
               <a href="#certificates" class="nav__link">
-                <i class="bx bx-award"></i>Certificates
+                <i class="bx bx-award nav__icon"></i>Certificates
               </a>
             </li>
             <li class="nav__item">
               <a href="#references" class="nav__link">
-                <i class="bx bx-link-external"></i>References
+                <i class="bx bx-link-external nav__icon"></i>References
               </a>
             </li>
           </ul>
@@ -65,7 +65,9 @@
         </div>
       </nav>
     </header>
-    <main class="l-main bd-container"></main>
+    <main class="l-main bd-container">
+      <!--  all elements in this div will be generated in PDF -->
+    </main>
     <!-- ========= SCROLL TOP ========= -->
     <!-- ========= HTML2PDF ========= -->
     <script src=""></script>
