--- a/index.html
+++ b/index.html
@@ -67,6 +67,81 @@
     </header>
     <main class="l-main bd-container">
       <!--  all elements in this div will be generated in PDF -->
+
+      <div class="resume" id="area-cv">
+        <div class="resume__left">
+          <!--========== HOME ==========-->
+          <section class="home" id="home">
+            <div class="home__container section bd-grid">
+              <div class="home__data bd-grid">
+                <img src="/assets/img/perfil.jpg" alt="" class="home__img" />
+
+                <h1 class="home__title">GUEZGUEZ <b> KHALIL</b></h1>
+                <h3 class="home__profession">Software engineer</h3>
+
+                <!-- Button  to download your cv saved in the pdf folder.Available for mobile-->
+
+                <div>
+                  <a
+                    download=""
+                    href="assets//pdf/ResumeCv.pdf"
+                    class="home__button-movil"
+                    >Download</a
+                  >
+                </div>
+              </div>
+
+              <div class="home_address bd-grid">
+                <span class="home__information">
+                  <i class="bx bx-map home__icon"></i>9 rue des Vergers,
+                  khaznadar - Tunis
+                </span>
+                <span class="home__information">
+                  <i class="bx bx-envelope home__icon"></i>
+                  khalilguezguez30@gmail.com
+                </span>
+
+                <span class="home__information">
+                  <i class="bx bx-phone home__icon"></i>+(216)26081097
+                </span>
+              </div>
+            </div>
+          </section>
+
+          <!-- Theme change button -->
+
+          <!-- Button to generate and download the pdf. Available for desktop. -->
+
+          <!--========== SOCIAL ==========-->
+          <section class="social section"></section>
+
+          <!--========== PROFILE ==========-->
+          <section class="profile section" id="profile"></section>
+
+          <!--========== EDUCATION ==========-->
+          <section class="education section" id="education"></section>
+
+          <!--========== SKILLS  ==========-->
+          <section class="skills section" id="skills"></section>
+        </div>
+
+        <div class="resume__right">
+          <!--========== EXPERIENCE ==========-->
+          <section class="experience section" id="experience"></section>
+
+          <!--========== CERTIFICATES ==========-->
+          <section class="certificate section" id="certificates"></section>
+
+          <!--========== REFERENCES ==========-->
+          <section class="references section" id="references"></section>
+
+          <!--========== LANGUAGES ==========-->
+          <section class="languages section"></section>
+
+          <!--========== INTERESTS ==========-->
+          <section class="interests section"></section>
+        </div>
+      </div>
     </main>
     <!-- ========= SCROLL TOP ========= -->
     <!-- ========= HTML2PDF ========= -->
