--- a/index.html
+++ b/index.html
@@ -113,7 +113,37 @@
           <!-- Button to generate and download the pdf. Available for desktop. -->
 
           <!--========== SOCIAL ==========-->
-          <section class="social section"></section>
+          <section class="social section">
+            <h2 class="section-title">SOCIAL</h2>
+
+            <div class="social__container bd-grid">
+              <a
+                href="https://www.linkedin.com/in/khalil-guezguez-88b25b131/"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="bx bxl-linkedin-square social__icon"></i> @khalil
+                guezguez
+              </a>
+              <a
+                href="https://www.facebook.com/guezguezKhalil/"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="bx bxl-facebook social__icon"></i> @khalil guezguez
+              </a>
+              <a
+                href="https://www.instagram.com/khalil_lively"
+                target="_blank"
+                class="social__link"
+              >
+                <i class="bx bxl-instagram social__icon"></i> @khalil_lively
+              </a>
+              <a href="" class="social__link">
+                <i class="bx bxl-skype social__icon"></i> @guezguez khalil
+              </a>
+            </div>
+          </section>
 
           <!--========== PROFILE ==========-->
           <section class="profile section" id="profile"></section>
