--- a/index.html
+++ b/index.html
@@ -146,7 +146,17 @@
           </section>
 
           <!--========== PROFILE ==========-->
-          <section class="profile section" id="profile"></section>
+          <section class="profile section" id="profile">
+            <h2 class="section-title">Profile</h2>
+
+            <p class="profile__description">
+              I am a forward-looking Software Engineer, responsible with their
+              work during work hours, and i aspire to sharpen my skills and
+              acquire more knowledge. I hope to work in a meaningful and
+              challenging position that allows me to develop myself and have the
+              scope for advancement.
+            </p>
+          </section>
 
           <!--========== EDUCATION ==========-->
           <section class="education section" id="education"></section>
