--- a/index.html
+++ b/index.html
@@ -159,7 +159,49 @@
           </section>
 
           <!--========== EDUCATION ==========-->
-          <section class="education section" id="education"></section>
+          <section class="education section" id="education">
+            <h2 class="section-title">Education</h2>
+
+            <div class="educarion__container bd-grid">
+              <div class="education__content">
+                <div class="education__time">
+                  <span class="education__rounder"></span>
+                  <span class="education__line"></span>
+                </div>
+                <div class="education__data bd-grid">
+                  <h3 class="education__title">Software Engineer</h3>
+                  <span class="education__studies">Sesame University</span>
+                  <span class="education__year">2019-2021</span>
+                </div>
+              </div>
+              <div class="education__content">
+                <div class="education__time">
+                  <span class="education__rounder"></span>
+                  <span class="education__line"></span>
+                </div>
+                <div class="education__data bd-grid">
+                  <h3 class="education__title">
+                    Senior technician in Embedded Systems
+                  </h3>
+                  <span class="education__studies">Sesame University</span>
+                  <span class="education__year">2016 - 2019</span>
+                </div>
+              </div>
+              <div class="education__content">
+                <div class="education__time">
+                  <span class="education__rounder"></span>
+                  <!-- <span class="education__line"></span> -->
+                </div>
+                <div class="education__data bd-grid">
+                  <h3 class="education__title">Baccalaureate holder</h3>
+                  <span class="education__studies"
+                    >Ibn Abi Dhief HighSchool</span
+                  >
+                  <span class="education__year">2012 - 2016</span>
+                </div>
+              </div>
+            </div>
+          </section>
 
           <!--========== SKILLS  ==========-->
           <section class="skills section" id="skills"></section>
