--- a/index.html
+++ b/index.html
@@ -204,7 +204,53 @@
           </section>
 
           <!--========== SKILLS  ==========-->
-          <section class="skills section" id="skills"></section>
+          <section class="skills section" id="skills">
+            <h2 class="section-title">Skills</h2>
+
+            <div class="skills__content bd-grid">
+              <ul class="skills__data">
+                <li class="skills__name">
+                  <span class="skills__circle"></span> Html
+                </li>
+                <li class="skills__name">
+                  <span class="skills__circle"></span> CSS
+                </li>
+                <li class="skills__name">
+                  <span class="skills__circle"></span> JavaScript
+                </li>
+                <li class="skills__name">
+                  <span class="skills__circle"></span> TypeScript
+                </li>
+              </ul>
+              <ul class="skills__data">
+                <li class="skills__name">
+                  <span class="skills__circle"></span> Angular
+                </li> 
+                <li class="skills__name">
+                  <span class="skills__circle"></span> SQL/noSQL/MySQL
+                </li>
+                <li class="skills__name">
+                  <span class="skills__circle"></span> C/C#
+                </li>
+                <li class="skills__name">
+                  <span class="skills__circle"></span> JAVA/JEE
+                </li>
+              </ul>
+              <ul class="skills__data">
+                <li class="skills__name">
+                  <span class="skills__circle"></span> VHDL/SOC-C
+                </li>
+                <li class="skills__name">
+                  <span class="skills__circle"></span> Azure DevOps
+                </li>
+                <li class="skills__name">
+                    <span class="skills__circle"></span> gitHub
+                  </li>
+                  <li class="skills__name">
+                    <span class="skills__circle"></span> REST API
+                  </li>
+            </div>
+          </section>
         </div>
 
         <div class="resume__right">
