--- a/index.html
+++ b/index.html
@@ -255,7 +255,57 @@
 
         <div class="resume__right">
           <!--========== EXPERIENCE ==========-->
-          <section class="experience section" id="experience"></section>
+          <section class="experience section" id="experience">
+              <h2 class="section-title">Experience</h2>
+
+              <div class="experience__container bd-grid">
+                  <div class="experience__content">
+                      <div class="experience__time">
+                          <span class="experience__rounder"></span>
+                          <span class="experience__line"></span>
+                      </div>
+
+
+                      <div class="experience__data bd-grid">
+                          <h3 class="experience__title">End of Studies project</h3>
+                          <span class="experience__company">From February 2019 until July 2019 | ACI - Alpha Connect International</span>
+                          <p class="experience__description">
+                            Work carried out according to the SCRUM methodology. Development on an STM32 card, realization of a smart home model. An internet of things based work
+                          </p>
+                      </div>
+                  </div>
+                  <div class="experience__content">
+                    <div class="experience__time">
+                        <span class="experience__rounder"></span>
+                        <span class="experience__line"></span>
+                    </div>
+
+
+                    <div class="experience__data bd-grid">
+                        <h3 class="experience__title">Introductory training</h3>
+                        <span class="experience__company">From July 2018 until September 2018 | SAGEMCOM SOFTWARE AND TECHNOLOGIES</span>
+                        <p class="experience__description">
+                            Programming and testing of sensors using a Raspberry Pi, linking to the ThingSpeak cloud and reading in real time values. Hosting website coded in Angular, accompanied by an android application
+                        </p>
+                    </div>
+                </div>
+                <div class="experience__content">
+                    <div class="experience__time">
+                        <span class="experience__rounder"></span>
+                       <!--  <span class="experience__line"></span> -->
+                    </div>
+
+
+                    <div class="experience__data bd-grid">
+                        <h3 class="experience__title">Worker internship</h3>
+                        <span class="experience__company">From June 2017 until August 2017 | CROWN MAGHREB CAN</span>
+                        <p class="experience__description">
+                            Installation and programming of sensors, PLC programming, basic electricity, basic mechanics, ERP
+                        </p>
+                    </div>
+                </div>
+              </div>
+          </section>
 
           <!--========== CERTIFICATES ==========-->
           <section class="certificate section" id="certificates"></section>
