--- a/index.html
+++ b/index.html
@@ -308,7 +308,37 @@
           </section>
 
           <!--========== CERTIFICATES ==========-->
-          <section class="certificate section" id="certificates"></section>
+          <section class="certificate section" id="certificates">
+
+            <h2 class="section-title">Certificates</h2>
+                <div class="certificates__container bd-grid">
+
+                    <div class="certificates__content">
+                        <h3 class="certificates__title">Scrum Foundation Professional Certificate | SFPC (2021)</h3>
+                        <p class="certificates__description">For succesfully passing the Scrum certification </p>
+                    </div>
+
+
+                    <div class="certificates__content">
+                        <h3 class="certificates__title">TOEIC certificate(2019)</h3>
+                        <p class="certificates__description">For succesfully passing the TOEIC certification | score 950/990</p>
+                    </div>
+
+
+                    <div class="certificates__content">
+                        <h3 class="certificates__title">Senior technician diploma (2019)</h3>
+                        <p class="certificates__description">For the validation of the end of studies project and the validation of the applied license studies</p>
+                    </div>
+
+
+
+                    <div class="certificates__content">
+                        <h3 class="certificates__title"> Baccalaureate (2016)</h3>
+                        <p class="certificates__description">For finishing the undergraduate studies </p>
+                    </div>
+                </div>
+
+          </section>
 
           <!--========== REFERENCES ==========-->
           <section class="references section" id="references"></section>
