--- a/index.html
+++ b/index.html
@@ -341,7 +341,29 @@
           </section>
 
           <!--========== REFERENCES ==========-->
-          <section class="references section" id="references"></section>
+          <section class="references section" id="references">
+
+                <h2 class="section-title">References</h2>
+
+                <div class="references__container bd-grid" >
+                    <div class="references__content bd-grid">
+                        <span class="references__subtitle">general secretary</span>
+                         <h3 class="references__title">Mr.Nejib Zaatour </h3>
+                        <ul class="references__contact"><li>Phone: +(216)98332942</li>
+                        <li>Phone: +(216)70686486</li>
+                        <li>Email: nejib.zaatour@sesame.com.tn</li></ul>
+                    </div>
+            
+                <div class="references__content bd-grid" >
+                    <span class="references__subtitle">Assistant Master sesame IT</span>
+                    <h3 class="references__title">Dr.Sameh BENNOUR </h3>
+                    <ul class="references__contact"><li>Phone: +(216) 70 686 486 </li>
+                       
+                        <li>Email: sameh.bennour@sesame.com.tn</li></ul>
+                </div>
+
+
+          </section>
 
           <!--========== LANGUAGES ==========-->
           <section class="languages section"></section>
