--- a/index.html
+++ b/index.html
@@ -366,7 +366,30 @@
           </section>
 
           <!--========== LANGUAGES ==========-->
-          <section class="languages section"></section>
+          <section class="languages section">
+
+                <h2 class="section-title">Languages</h2>
+
+                <div class="languages__container">
+                    <ul class="languages__content bd-grid">
+                        <li class="languages__name">
+                            <span class="languages__circle"></span>Arabic
+                        </li>
+                        <li class="languages__name">
+                            <span class="languages__circle"></span>French
+                        </li>
+                        <li class="languages__name">
+                            <span class="languages__circle"></span>English
+                        </li>
+                        <li class="languages__name">
+                            <span class="languages__circle"></span>German
+                        </li>
+                    </ul>
+                </div>
+
+
+
+          </section>
 
           <!--========== INTERESTS ==========-->
           <section class="interests section"></section>
