--- a/index.html
+++ b/index.html
@@ -424,6 +424,15 @@
       </div>
     </main>
     <!-- ========= SCROLL TOP ========= -->
+
+
+
+
+
+    <a href="#" class="scrolltop" id="scroll-top">
+        <i class="bx bx-up-arrow-alt scrolltop__icon"></i>
+    </a>
+
     <!-- ========= HTML2PDF ========= -->
     <script src=""></script>
     <!-- ========= MAIN JS ========= -->
