light/dark mode

--- a/index.html
+++ b/index.html
@@ -100,12 +100,14 @@
                             </span>
                         </div>
                     </div>
+
+
+                    <!-- Theme change button -->
+
+                    <i class="bx bx-moon change-theme" title="Theme" id="theme-button"></i>
+
+                    <!-- Button to generate and download the pdf. Available for desktop. -->
                 </section>
-
-                <!-- Theme change button -->
-
-                <!-- Button to generate and download the pdf. Available for desktop. -->
-
                 <!--========== SOCIAL ==========-->
                 <section class="social section">
                     <h2 class="section-title">SOCIAL</h2>
@@ -133,9 +135,9 @@
                     <h2 class="section-title">Profile</h2>
 
                     <p class="profile__description">
-                        I am a forward-looking Software Engineer, responsible with their
+                        I am a forward-looking Software Engineer, responsible with my
                         work during work hours, and i aspire to sharpen my skills and
-                        acquire more knowledge. I hope to work in a meaningful and
+                        acquire more knowledge. I hope to practice in a meaningful and
                         challenging position that allows me to develop myself and have the
                         scope for advancement.
                     </p>
