--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                     <i class="bx bx-moon change-theme" title="Theme" id="theme-button"></i>
 
                     <!-- Button to generate and download the pdf. Available for desktop. -->
+
+                    <i class="bx bx-download generate-pdf" title="Generate PDF" id="resume-button"></i>
                 </section>
                 <!--========== SOCIAL ==========-->
                 <section class="social section">
