--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <!-- Button  to download your cv saved in the pdf folder.Available for mobile-->
 
                             <div>
-                                <a download="" href="assets//pdf/ResumeCv.pdf" class="home__button-movil">Download</a>
+                                <a download="" href="assets/pdf/GuezguezKhalilResume.pdf" class="home__button-movil">Download</a>
                             </div>
                         </div>
 
